--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
 
   --gradient-accent: linear-gradient(to right, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
   --gradient-neutral: linear-gradient(to right, hsl(237, 17%, 21%), hsl(237, 23%, 32%));
+
+  --padding: 10vw;
 }
 
 /* reset */
@@ -70,9 +72,249 @@ a:not([class]) {
 /* end reset */
 
 body {
-  font-family: "Overpass", serif; /*headings, "Ubuntu" for paragraphs */
+  font-family: "Overpass", sans-serif; /*headings, "Ubuntu" for ? */
+  font-size: 16px;
+  color: var(--neutral-300);
 }
+
+a {
+  text-decoration: none;
+}
+/*p {
+  font-family: "Ubuntu", sans-serif;
+}*/
 
 .header__right-mobile { /*temp*/
   display: none;
+}
+
+header {
+  background-image: url('./images/bg-pattern-intro-desktop.svg'); /* fallback */
+  background-image: url('./images/bg-pattern-intro-desktop.svg'), var(--gradient-accent);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 50% 50%;
+  border-radius: 0 0 0 3rem;
+  padding: 3rem var(--padding);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--neutral-100);
+}
+
+header a {
+  color: var(--neutral-100);
+  font-size: 0.8em;
+}
+
+.header__top {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.header__left {
+  display: flex;
+  align-items: center;
+  gap: 5vw;
+}
+
+.header__right-desktop {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+nav {
+  display: flex;
+  gap: 1em;
+}
+
+.nav__section-header {
+  display: flex;
+  gap: 0.4em;
+}
+
+.nav__dropdown {
+  display: none;
+}
+
+.header__main {
+  text-align: center;
+  margin: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5em;
+}
+
+.header__main p {
+  opacity: 0.7;
+}
+
+.header__button-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+}
+
+button {
+  width: 6rem;
+  padding: 1em 0;
+  border-radius: 2.5rem;
+  border: transparent;
+  font-weight: 600;
+}
+
+.button-solid {
+  background-color: var(--neutral-100);
+  color: var(--primary-1);
+}
+
+.button-transparent {
+  background-color: transparent;
+  border: 2px solid var(--neutral-100);
+  color: var(--neutral-100);
+}
+
+main {
+  width: 100vw;
+  overflow: hidden;
+}
+
+.one {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5em;
+  padding: var(--padding) 0 var(--padding) var(--padding);
+}
+
+.large { /* not right, maybe this is ubuntu */
+  font-size: 2em; 
+
+}
+
+.small {
+  font-size: 1.5em;
+}
+.one > .large {
+  grid-column: 1/3;
+  grid-row: 1;
+  text-align: center;
+  padding-right: var(--padding); /* to shift left */
+}
+
+.one > .picture__container {
+  grid-column: 2;
+  grid-row: 2;
+  border: 1px solid blue;
+  position: relative;
+}
+
+.one picture {
+  position: absolute;
+  scale: 1.5;
+  transform: translate(13%, -10%);
+}
+
+.one > .section__text-wrapper {
+  grid-column: 1;
+  grid-row: 2;
+  border: 1px solid blue;
+}
+
+.section__text-wrapper, .text {
+  display: flex;
+  flex-direction: column;
+}
+
+.section__text-wrapper {
+  gap: 3em;
+}
+
+.text {
+  gap: 1em;
+  line-height: 1.8;
+}
+
+.two {
+  background-image: url('./images/bg-pattern-circles.svg'); /* fallback */
+  background-image: url('./images/bg-pattern-circles.svg'), var(--gradient-neutral);
+  background-repeat: no-repeat;
+  background-position: -80% 80%;
+  color: var(--neutral-100);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--padding);
+  border-radius: 0 5rem 0 5rem;
+}
+
+.two > .picture__container {
+  position: relative;
+}
+
+.two img {
+  position: absolute;
+  transform: translate(15%, -10%);
+}
+
+.two .text {
+  padding: 6em 6em 6em 0; 
+}
+
+.three {
+  margin-top: 6rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5em;
+  padding: var(--padding) var(--padding) var(--padding) 0;
+}
+
+.three > .picture__container {
+  border: 1px solid blue;
+  position: relative;
+}
+
+.three picture {
+  position: absolute;
+  scale: 1.5;
+  transform: translate(-12%, 0%);
+}
+
+footer {
+  background-color: var(--neutral-400);
+  color: var(--neutral-200);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+  padding: 4rem var(--padding) 1rem 0;
+}
+
+.footer__content {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.footer__category, .footer__links {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__category {
+  gap: 1em;
+}
+
+.footer__links {
+  gap: 0.6em;
+}
+
+.extra-small {
+  font-size: 0.8em;
+  color: var(--neutral-100);
+}
+footer a {
+  color: var(--neutral-200);
+  font-size: 0.8em;
 }
