--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ header {
 header a {
   color: var(--neutral-100);
   font-size: 0.8em;
+  font-weight: 600;
 }
 
 .header__top {
@@ -147,7 +148,7 @@ nav {
   gap: 1.5em;
 }
 
-.header__main p {
+.header__main p, header a {
   opacity: 0.7;
 }
 
@@ -314,6 +315,7 @@ footer {
   font-size: 0.8em;
   color: var(--neutral-100);
 }
+
 footer a {
   color: var(--neutral-200);
   font-size: 0.8em;
