--- a/style.css
+++ b/style.css
@@ -80,13 +80,6 @@ body {
 a {
   text-decoration: none;
 }
-/*p {
-  font-family: "Ubuntu", sans-serif;
-}*/
-
-.header__right-mobile { /*temp*/
-  display: none;
-}
 
 header {
   background-image: url('./images/bg-pattern-intro-desktop.svg'); /* fallback */
@@ -98,6 +91,7 @@ header {
   padding: 3rem var(--padding);
   display: flex;
   flex-direction: column;
+  gap: 2em;
   align-items: center;
   color: var(--neutral-100);
 }
@@ -124,6 +118,10 @@ header a {
   display: flex;
   align-items: center;
   gap: 1em;
+}
+
+.header__right-mobile { 
+  display: none;
 }
 
 nav {
@@ -189,14 +187,18 @@ main {
   padding: var(--padding) 0 var(--padding) var(--padding);
 }
 
+.extra-large {
+  font-size: 3em;
+}
+
 .large { /* not right, maybe this is ubuntu */
   font-size: 2em; 
-
 }
 
 .small {
   font-size: 1.5em;
 }
+
 .one > .large {
   grid-column: 1/3;
   grid-row: 1;
@@ -319,4 +321,42 @@ footer {
 footer a {
   color: var(--neutral-200);
   font-size: 0.8em;
+}
+
+/* active states */
+button:hover {
+  cursor: pointer;
+}
+
+a:hover:not(.dropdown-link) {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+}
+
+a.dropdown-link:hover {
+  font-weight: 700;
+}
+
+.nav__section {
+  position: relative;
+}
+
+.nav__dropdown {
+  display: flex; /* with js add class */
+  flex-direction: column;
+  gap: 0.5em;
+  width: 8rem;
+  position: absolute;
+  background-color: var(--neutral-100);
+  padding: 1.3em;
+  border-radius: 0.3em;
+  transform: translateY(10px);
+  /* need box shaddow */
+}
+
+.nav__dropdown .dropdown-link {
+  font-weight: 400;
+  font-size: 0.7em;
+  color: var(--neutral-400);
+  font-family: "Ubuntu", sans-serif;
 }
