--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ nav {
 
 .nav__section-header {
   display: flex;
+  align-items: center;
   gap: 0.4em;
 }
 
@@ -180,13 +181,21 @@ button {
 main {
   width: 100vw;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .one {
+  margin: 3rem 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5em;
-  padding: var(--padding) 0 var(--padding) var(--padding);
+  padding: var(--padding);
+  background-image: url('./images/illustration-editor-desktop.svg');
+  background-repeat: no-repeat;
+  background-position: 140% 50%;
+  background-size: 60%;
 }
 
 .extra-large {
@@ -205,19 +214,11 @@ main {
   grid-column: 1/3;
   grid-row: 1;
   text-align: center;
-  padding-right: var(--padding); /* to shift left */
 }
 
 .one > .picture__container {
   grid-column: 2;
   grid-row: 2;
-  position: relative;
-}
-
-.one picture {
-  position: absolute;
-  scale: 1.5;
-  transform: translate(13%, -10%);
 }
 
 .one > .section__text-wrapper {
@@ -269,22 +270,15 @@ main {
 }
 
 .three {
-  margin-top: 6rem;
+  margin: 5rem 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5em;
-  padding: var(--padding) var(--padding) var(--padding) 0;
-}
-
-.three > .picture__container {
-  border: 1px solid blue;
-  position: relative;
-}
-
-.three picture {
-  position: absolute;
-  scale: 1.5;
-  transform: translate(-12%, 0%);
+  padding: var(--padding);
+  background-image: url('./images/illustration-laptop-desktop.svg');
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-position: -42% 50%;
 }
 
 footer {
@@ -383,6 +377,9 @@ a.dropdown-link:hover {
   transform: rotate(180deg);
 }
 
+.nav__section-header > img, .mobile-menu__section-header > img {
+  height: 80%; /* fix distortion in ff */
+}
 /* mobile menu */
 .header__top {
   position: relative;
@@ -400,7 +397,6 @@ a.dropdown-link:hover {
   align-items: center;
   right: 0;
   top: 120%;
-  /* needs box shadow */
   box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, 0.1);
   z-index: 1;
 }
@@ -419,6 +415,7 @@ a.dropdown-link:hover {
 .mobile-menu__section-header {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 0.4em;
 }
 
@@ -492,41 +489,33 @@ a.dropdown-link:hover {
 
   .one {
     grid-template-columns: 1fr;
-    gap: 0; /* without resetting this, the grid items were shifted to the left */
-    row-gap: 4em; 
-    padding: var(--padding);
+    gap: 0; 
+    row-gap: 1em; 
+    padding: 0;
     justify-content: center;
-    margin-top: 3rem;
+    background-image: none;
   }
 
-  .one > .picture__container {
+  .one > .large {
+    margin-top: 2rem;
+  }
+
+  .one > .picture__container { 
     grid-column: 1;
     grid-row: 2;
-    position: relative;
-    border: 1px solid blue;
-    height: 18rem;
-  }
-  
-  .one picture {
-    position: absolute;
-    left: 10%; /* getting good position for one size, screws up others */
-    top: 0%;
-    width: 80vw;
-  
-    transform: translate(-10%, 0); 
+    height: 100vw;
+    background-image: url('./images/illustration-editor-mobile.svg');
+    background-repeat: no-repeat;
+    background-size: 110%;
+    background-position: 50%, 50%;
   }
 
   .one > .section__text-wrapper {
     grid-column: 1;
     grid-row: 3;
     text-align: center;
-    border: 1px solid blue;
-    margin-top: 5rem;
-  }
-
-  .one > .large {
-    padding: 0; 
-    border: 1px solid blue;
+    padding: var(--padding);
+    margin-top: -1rem;
   }
 
   .two {
@@ -540,7 +529,6 @@ a.dropdown-link:hover {
   .two > .picture__container {
     position: relative;
     height: 5rem; 
-    border: 1px solid pink;
   }
   
   .two img {
@@ -551,7 +539,6 @@ a.dropdown-link:hover {
   .two .text {
     padding: calc(3 * var(--padding)) var(--padding); 
     text-align: center;
-    letter-spacing: 1px; /* should this be on all text?? */
   }
 
   .three {
@@ -559,24 +546,22 @@ a.dropdown-link:hover {
     display: grid;
     grid-template-columns: 1fr;
     gap: 5em;
-    padding: calc(2 * var(--padding)) var(--padding);
+    padding: 0;
     text-align: center;
+    background-image: none;
   }
   
   .three > .picture__container {
-    border: 1px solid blue;
-    height: 10rem;
-    position: relative;
-  }
-  
-  .three picture {
-    position: absolute;
-    width: 90vw;
-    transform: translate(-33.5%, -10%);
+    height: 100vw;
+    background-image: url('./images/illustration-laptop-mobile.svg');
+    background-repeat: no-repeat;
+    background-size: 145%;
+    background-position: 50%, 50%;
   }
 
   .three .section__text-wrapper {
-    margin-top: 5rem;
+    margin-top: -1rem;
+    padding: 0 var(--padding);
   }
 
   footer {
