--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ header {
   background-size: 100%;
   background-position: 50% 50%;
   border-radius: 0 0 0 5rem;
-  padding: 3rem var(--padding);
+  padding: 3rem var(--padding) 6rem;
   display: flex;
   flex-direction: column;
   gap: 2em;
@@ -187,7 +187,6 @@ main {
 }
 
 .one {
-  margin: 3rem 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5em;
@@ -214,6 +213,11 @@ main {
   grid-column: 1/3;
   grid-row: 1;
   text-align: center;
+  color: var(--primary-3);
+}
+
+.one > .small, .three > .small {
+  color: var(--primary-3);
 }
 
 .one > .picture__container {
@@ -277,8 +281,8 @@ main {
   padding: var(--padding);
   background-image: url('./images/illustration-laptop-desktop.svg');
   background-repeat: no-repeat;
-  background-size: 60%;
-  background-position: -42% 50%;
+  background-size: 70%;
+  background-position: -66% 50%;
 }
 
 footer {
@@ -494,6 +498,7 @@ a.dropdown-link:hover {
     padding: 0;
     justify-content: center;
     background-image: none;
+    margin: 3rem 0;
   }
 
   .one > .large {
@@ -604,3 +609,11 @@ a.dropdown-link:hover {
     display: none; /* flex */
   }
 }
+
+.attribution { 
+  font-size: 11px; 
+  text-align: center; }
+
+  .attribution a { 
+    color: var(--neutral-200); 
+  }
